<resources>
    <string name="app_name">SteamApp</string>
    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="online">Online</string>
    <string name="busy">Busy</string>
    <string name="away">Away</string>
    <string name="snooze">Snooze</string>
    <string name="lookingToTrade">looking to trade</string>
    <string name="lookingToPlay">looking to play</string>
    <string name="offline">Offline</string>
    <string name="friends">Friends</string>
    <string name="my_profile">My Profile</string>
    <string name="map">Map</string>
    <string name="games">Games</string>
    <string name="past_here_your_stem_id">Past here your stem id</string>
    <string name="enter">Enter</string>
    <string name="settings">Settings</string>
    <string name="null_field">Field must not be Null!!!</string>
    <string name="is_it_your_steam_id">Is it your Steam ID?</string>
    <string name="past_here_latitude">Past here latitude</string>
    <string name="past_here_longitude">Past here longitude</string>
    <string name="edit_user_home_location">Edit user home location</string>
    <string name="not_valid_input_value">\"Value must be Double and not NULL. \"</string>
    <string name="stop_tracking">STOP TRACKING</string>
    <string name="start_status_tracking">START STATUS TRACKING</string>
    <string name="delete_tag">DELETE TAG</string>
    <string name="tag_deleted">Tag will be deleted</string>
</resources>